Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -114,7 +114,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your solution"
+    "- Compute the probability that the next customer completely fills their tank and buys Super 95. \n",
+    "- Compute the probability that the next customer completely fills their tank\n",
+    "- Given that the next customer fills their tank completely, compute the probability that they bought Diesel. "
    ]
   },
   {
