Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -110,13 +110,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "- Compute the probability that the next customer completely fills their tank and buys Super 95. \n",
-    "- Compute the probability that the next customer completely fills their tank\n",
-    "- Given that the next customer fills their tank completely, compute the probability that they bought Diesel. "
+    "# Compute the probability that the next customer completely fills their tank and buys Super 95. \n",
+    "\n",
+    "\n",
+    "# Compute the probability that the next customer completely fills their tank\n",
+    "# Given that the next customer fills their tank completely, compute the probability that they bought Diesel. "
    ]
   },
   {
