--- a/index.ipynb
+++ b/index.ipynb
@@ -110,14 +110,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Compute the probability that the next customer completely fills their tank and buys Super 95. \n",
-    "0.35*0.6\n",
-    "\n",
-    "# Compute the probability that the next customer completely fills their tank\n",
+    "0.35*0.6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compute the probability that the next customer completely fills their tank"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Given that the next customer fills their tank completely, compute the probability that they bought Diesel. "
    ]
   },
