Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -110,9 +110,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.21"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Compute the probability that the next customer completely fills their tank and buys Super 95. \n",
     "0.35*0.6"
@@ -124,7 +135,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Compute the probability that the next customer completely fills their tank"
+    "# Compute the probability that the next customer completely fills their tank\n"
    ]
   },
   {
