--- a/index.ipynb
+++ b/index.ipynb
@@ -135,7 +135,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Compute the probability that the next customer completely fills their tank\n"
+    "# Compute the probability that the next customer completely fills their tank\n",
+    "0.4*0.3 + 0."
    ]
   },
   {
