Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -156,7 +156,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Given that the next customer fills their tank completely, compute the probability that they bought Diesel. \n"
+    "# Given that the next customer fills their tank completely, compute the probability that they bought Diesel. \n",
+    "0.4*"
    ]
   },
   {
