Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -202,7 +202,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your solution"
+    "# Compute the probability that all the flights are overbooked.\n",
+    "# Compute the probability of having at least one flight which is not overbooked.\n",
+    "Compute the probability that exactly one flight is overbooked."
    ]
   },
   {
