--- a/index.ipynb
+++ b/index.ipynb
@@ -204,7 +204,7 @@
    "source": [
     "# Compute the probability that all the flights are overbooked.\n",
     "# Compute the probability of having at least one flight which is not overbooked.\n",
-    "Compute the probability that exactly one flight is overbooked."
+    "# Compute the probability that exactly one flight is overbooked."
    ]
   },
   {
