--- a/index.ipynb
+++ b/index.ipynb
@@ -198,12 +198,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compute the probability that all the flights are overbooked.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compute the probability of having at least one flight which is not overbooked."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Compute the probability that all the flights are overbooked.\n",
-    "# Compute the probability of having at least one flight which is not overbooked.\n",
     "# Compute the probability that exactly one flight is overbooked."
    ]
   },
