Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -198,11 +198,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.034999999999999996"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Compute the probability that all the flights are overbooked.\n"
+    "# Compute the probability that all the flights are overbooked.\n",
+    "0.4*0.25*0.35"
    ]
   },
   {
