Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -223,7 +223,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Compute the probability of having at least one flight which is not overbooked."
+    "# Compute the probability of having at least one flight which is not overbooked.\n",
+    "1 - ()"
    ]
   },
   {
