--- a/index.ipynb
+++ b/index.ipynb
@@ -244,7 +244,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Compute the probability that exactly one flight is overbooked."
+    "# Compute the probability that exactly one flight is overbooked.\n"
    ]
   },
   {
