Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -244,7 +244,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Compute the probability that exactly one flight is overbooked.\n"
+    "# Compute the probability that exactly one flight is overbooked.\n",
+    "0.4*0.6*0.75*0.35"
    ]
   },
   {
